--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/mealeark/mealear-khiev-portfolio.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/mealeark/mealear-khiev-portfolio/issues"
   },
@@ -23,7 +23,6 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
@@ -32,13 +31,12 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.7",
-    "@fortawesome/fontawesome-free-brands": "^5.0.12",
-    "@fortawesome/fontawesome-free-regular": "^5.0.12",
-    "@fortawesome/react-fontawesome": "0.0.19",
+    "gulp": "^3.9.1",
+    "jquery": "^3.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "semantic-ui": "^2.3.3"
   }
 }
