--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
