--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "semantic-ui": "^2.3.3"
+    "react-router-dom": "^4.2.2"
   }
 }
