--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.12",
     "@fortawesome/react-fontawesome": "0.0.19",
     "gulp": "^3.9.1",
+    "html5shiv": "^3.7.3",
     "jquery": "^3.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "respond": "^0.9.0",
+    "skel-framework-npm": "^1.0.1",
+    "skeleton-css": "^2.0.4"
   }
 }
